# Cigness

./: Cargo.toml  README.md  c_node_profile.cigness.json  cigness_node_registry.json  eco_action_scoring.cigness.json  infographic.html  m_node_profile.cigness.json  p_node_profile.cigness.json  r_node_xr_profile.cigness.json  xr_content_pack.schema.cigness.json
aln/qpudatashards/: NEURO‑CONSENT‑SMOKING.aln
api/: cigness_node_api.schema.json  key_issuance_workflow.cigness.json  partner_api_keys.cigness.json  public_dashboard_api.cigness.json
cigness-infra/: Cargo.toml
configs/: cigness.geo-grid.kml  cigness.plastic-loop.json  cigness.runtime.policy.json
dashboard/: collaborator_room.cigness.json  partner_onboarding_workflow.cigness.json  partner_registry.cigness.json  partner_review_queue.cigness.json  public_dashboard_model.cigness.json
docs/: Tree-of-FEAR-and-neurochemical-toxin-understanding.md  architecture_overview.cigness.md  intro.md  neurology-lessons-in-smoking-dangers-and-neuro-therapeutic-discovery.md
ops/: data-lake-ingest.cigness.yaml  dream-catcher.cigness-xr.yaml  typewriter-claims.cigness.yaml
particles/: WasteOptimizer.cs
pilots/: city_district_tobacco_alcohol_litter_protocol_v1.0.md
qpudatashards/: eco_smoker_urges.csv  ecoquit_impact_shard_v1.csv  neuroquit_sessions_v1.csv  neuroquit_sessions_v2.csv  simulator.mojo  tobacco_footprint_factors_v1.csv
schemas/: neuroquit_session_schema_v1.aln
src/: craving_biophysics.cpp  ecoquit_engine.cpp  ecoquit_engine.hpp  main.cpp  session_models.cpp
workflows/: ci-cd.yaml
(+39 files in other folders)
